--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -11,47 +11,68 @@ commits-since-version-source-padding: 4
 commit-message-incrementing: Enabled
 branches:
   master:
+    regex: master
     mode: ContinuousDeployment
     tag: ''
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
-  releases?[/-]:
+    tracks-release-branches: false
+    is-release-branch: false
+  release:
+    regex: releases?[/-]
     mode: ContinuousDeployment
     tag: beta
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
-  features?[/-]:
+    tracks-release-branches: false
+    is-release-branch: true
+  feature:
+    regex: features?[/-]
     mode: ContinuousDeployment
     tag: useBranchName
     increment: Inherit
     prevent-increment-of-merged-branch-version: false
     track-merge-target: false
-  (pull|pull\-requests|pr)[/-]:
+    tracks-release-branches: false
+    is-release-branch: false
+  pull-request:
+    regex: (pull|pull\-requests|pr)[/-]
     mode: ContinuousDeployment
     tag: PullRequest
     increment: Inherit
     prevent-increment-of-merged-branch-version: false
     tag-number-pattern: '[/-](?<number>\d+)[-/]'
     track-merge-target: false
-  hotfix(es)?[/-]:
+    tracks-release-branches: false
+    is-release-branch: false
+  hotfix:
+    regex: hotfix(es)?[/-]
     mode: ContinuousDeployment
     tag: beta
     increment: Patch
     prevent-increment-of-merged-branch-version: false
     track-merge-target: false
-  support[/-]:
+    tracks-release-branches: false
+    is-release-branch: false
+  support:
+    regex: support[/-]
     mode: ContinuousDeployment
     tag: ''
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
-  dev(elop)?(ment)?$:
+    tracks-release-branches: false
+    is-release-branch: false
+  develop:
+    regex: dev(elop)?(ment)?$
     mode: ContinuousDeployment
-    tag: alpha
+    tag: unstable
     increment: Minor
     prevent-increment-of-merged-branch-version: false
     track-merge-target: true
+    tracks-release-branches: true
+    is-release-branch: false
 ignore:
   sha: []
